--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "mdb-react-ui-kit": "^1.0.0-alpha2",
     "mdbreact": "^5.0.1",
     "popper.js": "^1.16.1",
