--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "image-to-base64": "^2.1.1",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "mdb-react-ui-kit": "^1.0.0-alpha2",
