--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-hash-link": "^2.3.1",
