--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mdbreact": "^5.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-animation": "^1.2.2",
     "react-bootstrap": "^1.4.3",
     "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
