--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mdbreact": "^5.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-animation": "^1.2.2",
     "react-bootstrap": "^1.4.3",
     "react-card-flip": "^1.1.0",
